---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: 16. 4. 2021
  Bugfixes:
    - Historical ticks not being included in recalculating evolution

---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 16. 4. 2021
  Improvements:
    - Optimized calculating evolution
    - Added a mod setting to allow for recalculating all evolution history with new mod settings values, will not be a perfect reconstruction of history (lossy).
    - Added mod settings for display evolution stats to console
    - Added time and pollution generated evolution options
    - Added console command /rampantEvolution to display a message to console
  Bugfixes:
    - Corrected asymptotic behavior of calculation by using counts instead of deltas allowing for counting everything separately
    - Fixed dying trees not being accounted for
  Tweaks:
    - Mod setting default reduced evolution from spawner pollution absorption by 65%
    - Mod setting default increased evolution reduction from trees absorbing pollution by 2x
    - Mod setting default increased evolution from trees being damaged by pollution by 58%
    - Mod setting default increased evolution from killing spawners by 10x
    - Mod setting default increased evolution reduction from killing hives by 10x
    - Mod setting default increased evolution reduction from killing biters to -30000

---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 16. 4. 2021
  Bugfixes:
    - Fixed mod settings being refreshed on any mod change

---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 27. 3. 2020
  Features:
    - Changes evolution mechanic to allow for green play and changes how evolution increases