@@ -16,6 +16,7 @@ rampant-evolution--displayEvolutionMsg=Enable console messages showing evolution
 rampant-evolution--evolutionPerPollution=Evolution per pollution generated
 rampant-evolution--evolutionPerTime=Evolution per second elapsed
 rampant-evolution--setMapSettingsToZero=Disable vanilla evolution factors (Permanent)
+rampant-evolution--minimumDevolutionPercentage=Peak evolution minimum percentage
 
 [mod-setting-description]
 rampant-evolution-evolutionPerUnitKilled=This setting changes how evolution should be affected by biter units being killed. This number should be treated the same as the vanilla pollution, spawner, and time sliders in terms of how to interpret it
@@ -31,7 +32,8 @@ rampant-evolution--recalculateAllEvolution=When this setting is checked the evol
 rampant-evolution--displayEvolutionMsgInterval=This is the interval that the evolution will be displayed on the console.
 rampant-evolution--displayEvolutionMsg=This is the setting to enable evolution to be displayed on the console at the specified interval.
 rampant-evolution--setMapSettingsToZero=If you have an existing save that you want to use this mod on and you want to disable the original map evolution settings. THIS IS PERMANENT, IF YOU REMOVE THE MOD WITH THIS SETTING CHECKED THE EVOLUTION WILL STAY DISABLED. UNCHECKING SHOULD RE-ENABLE THE VANILLA EVOLUTION.
+rampant-evolution--minimumDevolutionPercentage=Everytime the evolution goes up, this percentage is multiplied by evolution and stored as the lowest value the evolution can reach. So if you set the mod setting to 0.25 and your evolution hits 10% the lowest your evolution can go to is 2.5%
 
 [description]
 rampant-evolution--refreshingEvolution=RampantEvolution: Recalculating evolution, this could take several minutes to recalculate. Script times will be higher while reprocessing.
-rampant-evolution--displayEvolutionMsg=RampantEvolution:\n__1__%: Current Evolution\n   __2__%: Tile Absorbed Pollution Contribution\n   __3__%: Tree Absorbed Pollution Contribution\n   __4__%: Tree Damaged By Pollution Contribution\n   __5__%: Spawner Absorbed Pollution Contribution\n   __6__%: Killed Spawners Contribution\n   __7__%: Killed Hives Contribution\n   __8__%: Killed Units Contribution\n   __9__%: Pollution Generated Contribution\n   __10__%: Time Generated Contribution
+rampant-evolution--displayEvolutionMsg=RampantEvolution:\n__1__%: Current Evolution\n   __2__%: Tile Absorbed Pollution Contribution\n   __3__%: Tree Absorbed Pollution Contribution\n   __4__%: Tree Damaged By Pollution Contribution\n   __5__%: Spawner Absorbed Pollution Contribution\n   __6__%: Killed Spawners Contribution\n   __7__%: Killed Hives Contribution\n   __8__%: Killed Units Contribution\n   __9__%: Pollution Generated Contribution\n   __10__%: Time Generated Contribution\n   __11__%: Minimum Evolution
